js/js.translator/testData/incremental/invalidation/removeProducerModuleWithStaleConsumer/lib1/l1.kt
package upstream

fun foo(): String = "A0"
